--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,20 @@
-version: '3'
-
+version: '3.3'
 services:
-  db:
-    image: postgres
-  web:
+  webapps:
     build: .
-    command: python3 manage.py runserver 0.0.0.0:8000
-    volumes:
-      - .:/code
     ports:
-      - "8001:8000"
-    depends_on:
-      - db
+      - 80:80
+  #   links:
+  #     - "mariadb"
+
+  # mariadb:
+  #   image: mariadb
+  #   restart: always
+  #   env_file:
+  #     - env/mysql_vars.env
+
+  # adminer:
+  #   image: adminer
+  #   restart: always
+  #   ports:
+  #     - 8080:8080
