Added a "temppage" for maintenance

--- a/html/todo.yml
+++ b/html/todo.yml
@@ -21,3 +21,5 @@ Index page:
 Email:
   - Set up MX records
   - Set up email forwarding server
+Misc:
+! - Change placeholder "under maintenance" page
