Added some color constants and some dark mode styling

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "next": "9.3.4",
+    "postcss-modules-values": "^3.0.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "sass": "^1.26.3"
