--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "clsx": "^1.1.0",
     "next": "9.3.4",
     "postcss-modules-values": "^3.0.0",
     "react": "16.13.1",
