--- a/data/projects.json
+++ b/data/projects.json
@@ -3,14 +3,16 @@
 		"id": 0,
 		"title": "Project Title",
 		"desc": "Project Description",
+		"descFull": "Mollit do ad aliquip sit ipsum nulla pariatur nulla labore proident mollit. Id voluptate duis laborum exercitation incididunt commodo cupidatat. Amet dolor laboris adipisicing irure mollit ipsum. Fugiat eiusmod culpa id laboris occaecat esse veniam sit aute ullamco excepteur dolor ex. Sunt ipsum cillum eu laboris aliquip mollit ipsum consequat et consequat. Aliquip Lorem cupidatat magna exercitation.",
 		"tags": ["React", "Javascript", "Python"],
-		"coverImage": ""
+		"coverImage": "https://placeimg.com/640/320/any"
 	},
 	{
 		"id": 1,
 		"title": "Another Project Title",
 		"desc": "Another Project Description",
+		"descFull": "Ea excepteur laborum ipsum ut aute excepteur esse labore laboris nulla amet. Laborum incididunt cillum elit exercitation ex aute exercitation. Ullamco amet nostrud reprehenderit eu irure velit incididunt ipsum eiusmod excepteur tempor.",
 		"tags": ["React", "Javascript", "Python"],
-		"coverImage": ""
+		"coverImage": "https://placeimg.com/640/320/any"
 	}
 ]
