--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"postcss-modules-values": "^3.0.0",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
+		"react-icons": "^3.9.0",
 		"sass": "^1.26.3"
 	}
 }
