--- a/package.json
+++ b/package.json
@@ -17,5 +17,10 @@
 		"react-dom": "^16.13.1",
 		"react-icons": "^3.9.0",
 		"sass": "^1.26.3"
+	},
+	"devDependencies": {
+		"@types/node": "^13.13.2",
+		"@types/react": "^16.9.34",
+		"typescript": "^3.8.3"
 	}
 }
