--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
 		"postcss-modules-values": "^3.0.0",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
-		"react-icons": "^3.10.0",
-		"sass": "^1.26.5"
+		"react-icons": "^3.10.0"
 	},
 	"devDependencies": {
 		"@types/node": "^13.13.4",
